--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+juniper (0.6) UNRELEASED; urgency=medium
+
+  * New upstream release. 
+
+ -- Baard H. Rehn Johansen <baard@baard-bouvet.bouvet.no>  Wed, 09 Jul 2014 11:00:02 +0200
+
 juniper (0.5-1) maverick; urgency=low
 
   * New upstream release. 
