cleanup changelog from previous release

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,8 @@
 Release 0.6 (9th Jul 2014)
 
 - update SSL-cert
-- update ncsvc version
-- change default realm to Users
+- update ncsvc version to 8.0-3-Build30619
+- change default realm to 'Users'
 
 Release 0.5 (1th Mar 2012)
 
