--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-juniper (0.6) UNRELEASED; urgency=medium
+juniper (0.6) trusty; urgency=medium
 
   * New upstream release. 
 
- -- Baard H. Rehn Johansen <baard@baard-bouvet.bouvet.no>  Wed, 09 Jul 2014 11:00:02 +0200
+ -- Baard H. Rehn Johansen <baard@rehn.no>  Wed, 09 Jul 2014 11:00:02 +0200
 
 juniper (0.5-1) maverick; urgency=low
 
