--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+juniper (0.7) trusty; urgency=medium
+
+  * New upstream release.
+
+ -- Baard H. Rehn Johansen <baard@rehn.no>  Mon, 08 Feb 2016 19:46:05 +0100
+
 juniper (0.6) trusty; urgency=medium
 
   * New upstream release. 
