--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+juniper (0.8) trusty; urgency=medium
+
+  * New upstream release. 
+
+ -- Baard H. Rehn Johansen <baard@rehn.no>  Fri, 01 Apr 2016 09:38:12 +0200
+
 juniper (0.7) trusty; urgency=medium
 
   * New upstream release.
